--- a/package.json
+++ b/package.json
@@ -20,7 +20,11 @@
     "react-native": "0.70.5",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
-    "react-native-table-component": "^1.2.2"
+    "react-native-table-component": "^1.2.2",
+    "expo-media-library": "~15.0.0",
+    "expo-location": "~15.0.1",
+    "expo-task-manager": "~11.0.1",
+    "react-native-maps": "1.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
