--- a/package.json
+++ b/package.json
@@ -9,22 +9,25 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-picker/picker": "^2.4.8",
     "@react-navigation/bottom-tabs": "^6.5.2",
     "@react-navigation/native": "^6.1.1",
     "@react-navigation/native-stack": "^6.9.7",
     "expo": "~47.0.9",
+    "expo-document-picker": "~11.0.1",
     "expo-image-picker": "~14.0.2",
+    "expo-location": "~15.0.1",
+    "expo-media-library": "~15.0.0",
     "expo-status-bar": "~1.4.2",
+    "expo-task-manager": "~11.0.1",
     "prop-types": "^15.8.1",
     "react": "18.1.0",
     "react-native": "0.70.5",
+    "react-native-maps": "1.3.2",
+    "react-native-paper": "^5.1.2",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
-    "react-native-table-component": "^1.2.2",
-    "expo-media-library": "~15.0.0",
-    "expo-location": "~15.0.1",
-    "expo-task-manager": "~11.0.1",
-    "react-native-maps": "1.3.2"
+    "react-native-table-component": "^1.2.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
