--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-picker/picker": "^2.4.8",
+    "@react-native-picker/picker": "2.4.8",
     "@react-navigation/bottom-tabs": "^6.5.2",
     "@react-navigation/native": "^6.1.1",
     "@react-navigation/native-stack": "^6.9.7",
@@ -20,9 +20,11 @@
     "expo-media-library": "~15.0.0",
     "expo-status-bar": "~1.4.2",
     "expo-task-manager": "~11.0.1",
+    "moment": "^2.29.4",
     "prop-types": "^15.8.1",
     "react": "18.1.0",
     "react-native": "0.70.5",
+    "react-native-calendar-picker": "^7.1.3",
     "react-native-maps": "1.3.2",
     "react-native-paper": "^5.1.2",
     "react-native-safe-area-context": "4.4.1",
