--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "expo-media-library": "~15.0.0",
     "expo-status-bar": "~1.4.2",
     "expo-task-manager": "~11.0.1",
+    "geolib": "^3.3.3",
     "moment": "^2.29.4",
     "prop-types": "^15.8.1",
     "react": "18.1.0",
@@ -32,6 +33,8 @@
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
     "react-native-table-component": "^1.2.2",
+    "react-native-toast-message": "^2.1.5",
+    "react-native-toast-notifications": "^3.3.1",
     "react-redux": "^8.0.5",
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.2"
